--- a/client/index.html
+++ b/client/index.html
@@ -7,13 +7,14 @@
     <meta property="og:title" content="QuizBot" />
     <meta property="og:description" content="Generate fun and entertaining 10-question quizzes on any topic with AI. Share your quiz idea and let QuizBot create an engaging quiz for you!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://replit.com/public/images/opengraph.png" />
+    <meta property="og:image" content="/opengraph.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@replit" />
+    <meta name="twitter:site" content="@quizspark" />
     <meta name="twitter:title" content="QuizBot" />
     <meta name="twitter:description" content="Generate fun and entertaining 10-question quizzes on any topic with AI. Share your quiz idea and let QuizBot create an engaging quiz for you!" />
-    <meta name="twitter:image" content="https://replit.com/public/images/opengraph.png" />
+    <meta name="twitter:image" content="/opengraph.jpg" />
 
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
